[package]
authors = ["ceades"]
name = "icmprs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.4", features = [ "derive" ] }
env_logger = "0.10"
hostname = "0.3"
log = "0.4"
mio = { version="0.8", features = ["os-poll", "net"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
socket2 = "0.5"
tokio = { version = "1.32", features = ["full"] }
tokio-native-tls = "0.3"
